--- a/mac/Makefile
+++ b/mac/Makefile
@@ -6,7 +6,7 @@
 #    By: ksura <ksura@student.42wolfsburg.de>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/07 09:24:12 by ksura             #+#    #+#              #
-#    Updated: 2022/07/19 15:19:04 by ksura            ###   ########.fr        #
+#    Updated: 2022/07/19 16:29:07 by ksura            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,12 +22,11 @@ OBJDIR := build/
 LIBFT = $(LIBFT_DIRECTORY)/libft.a
 LIBFT_DIRECTORY = ./libft
 FT_INC	= -I ./libft/ -I ./mlx/
-FT_LNK	= ./libft/libftprintf.a
-
+FT_LNK	= ./libft/libft.a
 
 
 SRC := main.c mandelbrot.c colors.c moves.c zoom.c drawing.c\
-		julia.c burning_ship.c my_pixel.c
+		julia.c burning_ship.c my_pixel.c tools.c
 
 OBJS = ${SRC:.c=.o}
 OBJECTS_PREF := $(addprefix $(OBJDIR), $(OBJS))
