--- a/mac/Makefile
+++ b/mac/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: ksura <ksura@student.42wolfsburg.de>       +#+  +:+       +#+         #
+#    By: ksura@student.42wolfsburg.de <ksura@studen +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/07 09:24:12 by ksura             #+#    #+#              #
-#    Updated: 2022/07/19 17:00:18 by ksura            ###   ########.fr        #
+#    Updated: 2022/07/20 10:50:05 by ksura@student.42 ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,6 +14,7 @@ NAME := fractol
 CC = gcc
 CFLAGS := -Wall -Werror -Wextra
 LIBRARIES = $(FT_LNK) 
+LIBS = -lm
 INCLUDES = $(FT_INC)
 HEADER = ./header
 SRCDIR = src/
@@ -21,8 +22,20 @@ OBJDIR := build/
 
 LIBFT = $(LIBFT_DIRECTORY)/libft.a
 LIBFT_DIRECTORY = ./libft
+MINILIB_DIR = ./mlx
 FT_INC	= -I ./libft/ -I ./mlx/
 FT_LNK	= ./libft/libft.a
+
+OS = $(shell uname)
+ifeq ($(OS), Linux)
+	LIBS += -Lmlx -lmlx -L/usr/lib -Imlx -lX11 -lXext -lz 
+	OBLI += -I/usr/inlcude -Imlx
+	SRCS_NAMES += destroy_linux
+endif
+ifeq ($(OS), Darwin)
+	LIBS += -Lmlx -lmlx -framework OpenGL -framework AppKit
+	SRCS_NAMES += destroy_mac
+endif
 
 GREEN = \033[0;32m
 RED = \033[0;31m
@@ -37,16 +50,19 @@ OBJECTS_PREF := $(addprefix $(OBJDIR), $(OBJS))
 
 all: $(NAME)
 
-$(NAME): $(LIBFT) $(OBJECTS_PREF) $(OBJDIR)
-	@$(CC) $(FLAGS) $(OBJECTS_PREF) $(LIBRARIES) -I$(HEADER) -Lmlx -lmlx -framework OpenGL -framework AppKit -o $(NAME)
+$(NAME): $(LIBFT) $(MINILIB) $(OBJECTS_PREF) $(OBJDIR)
+	@$(CC) $(FLAGS) $(OBJECTS_PREF) $(LIBRARIES) -I$(HEADER) $(LIBS) -o $@
 	@echo "$(GREEN)$(NAME) was created"
 	
 $(LIBFT):
 	@cd ./$(LIBFT_DIRECTORY) && make all
 	
+$(MINILIB):
+	@cd ./$(MINILIB_DIR) && make
+	
 $(OBJECTS_PREF): build/%.o : src/%.c
 	@mkdir -p $(OBJDIR)
-	@$(CC) $(CFLAGS) -c $< -o $@ -I$(HEADER) $(INCLUDES)
+	@$(CC) $(CFLAGS) $(OBLI) -c $< -o $@ -I$(HEADER) $(INCLUDES)
 
 clean:
 	@cd ./$(LIBFT_DIRECTORY) && make clean
